Bug 489976 - Matrix username field is empty if you press back on the password stage
Summary: Matrix username field is empty if you press back on the password stage
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: 24.05.2
Platform: Flatpak Linux
: NOR minor
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-09 14:26 UTC by bicolino34
Modified: 2025-05-05 12:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bicolino34 2024-07-09 14:26:34 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY


STEPS TO REPRODUCE
1. Enter your matrix username
2. Click next
3. Get back to the username entering stage

OBSERVED RESULT
Username field is empty

EXPECTED RESULT
Username is the same you entered before

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Not quite a bug, but keeping username would make more sense in my opinion
Comment 1 Bug Janitor Service 2025-05-05 11:43:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/2250
Comment 2 James Graham 2025-05-05 12:48:28 UTC
Git commit 41e96fca704fd2e71461ab6d878be7be376cc663 by James Graham.
Committed on 05/05/2025 at 12:48.
Pushed by nvrwhere into branch 'master'.

Remember the matrixId during login when moving back from password

Remember the matrixId during login when moving back from password

M  +1    -0    src/login/Login.qml
M  +1    -1    src/login/login.cpp

https://invent.kde.org/network/neochat/-/commit/41e96fca704fd2e71461ab6d878be7be376cc663