Remember the matrixId during login when moving back from password

Remember the matrixId during login when moving back from password

BUG: 489976